--- a/course_1/gdm_lab_1_2_experiment_with_n_gram_models.ipynb
+++ b/course_1/gdm_lab_1_2_experiment_with_n_gram_models.ipynb
@@ -1762,7 +1762,7 @@
       "metadata": {
         "id": "2t7N3A3-kluq"
       },
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -1782,10 +1782,23 @@
         "print(f\"P(B | \\\"as they\\\") = {trigram_model['as they']}\")"
       ],
       "metadata": {
-        "id": "o-rVO6UykzyV"
+        "id": "o-rVO6UykzyV",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e6c59304-c040-4e60-eb6c-628ec94be709"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "P(B | \"as it\") = {'is': 0.6666666666666666, 'receives': 0.3333333333333333}\n",
+            "P(B | \"as they\") = {'were': 1.0}\n"
+          ]
+        }
+      ]
     },
     {
       "metadata": {
@@ -1811,15 +1824,30 @@
     },
     {
       "metadata": {
-        "id": "8RDyWq24roG2"
+        "id": "8RDyWq24roG2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "8346cf7d-18e0-4d8f-9b8f-bb26f33f6206"
       },
       "cell_type": "code",
       "source": [
         "context = \"The name\"\n",
         "trigram_model[context]"
       ],
-      "outputs": [],
-      "execution_count": null
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'means': 0.6666666666666666, \"'Etosha'\": 0.3333333333333333}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 26
+        }
+      ],
+      "execution_count": 26
     },
     {
       "metadata": {
@@ -1832,15 +1860,30 @@
     },
     {
       "metadata": {
-        "id": "S6D9iLQNr628"
+        "id": "S6D9iLQNr628",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "267b032e-25e2-41a2-b9ee-21233c0e899e"
       },
       "cell_type": "code",
       "source": [
         "context = \"Their name\"\n",
         "trigram_model[context]"
       ],
-      "outputs": [],
-      "execution_count": null
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 27
+        }
+      ],
+      "execution_count": 27
     },
     {
       "metadata": {
@@ -1886,7 +1929,11 @@
     },
     {
       "metadata": {
-        "id": "qNHq3vS1Rj8m"
+        "id": "qNHq3vS1Rj8m",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a63b9703-714c-474f-b1dd-040b3209d9a1"
       },
       "cell_type": "code",
       "source": [
@@ -1905,8 +1952,16 @@
         "\n",
         "print(\"Chosen fruit:\", chosen_fruit)"
       ],
-      "outputs": [],
-      "execution_count": null
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Chosen fruit: cherry\n"
+          ]
+        }
+      ],
+      "execution_count": 29
     },
     {
       "metadata": {
@@ -1927,13 +1982,17 @@
     },
     {
       "metadata": {
-        "id": "zBgdyD0XVa3A"
+        "id": "zBgdyD0XVa3A",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b9155066-9b59-48b6-ddb5-24c3768474f9"
       },
       "cell_type": "code",
       "source": [
         "context = \"looking for\"\n",
-        "candidate_tokens = []\n",
-        "candidate_tokens_probabilities = []\n",
+        "candidate_tokens = [x for x in trigram_model[context].keys()]\n",
+        "candidate_tokens_probabilities = [x for x in trigram_model[context].values()]\n",
         "\n",
         "# Extract candidate tokens and associated probabilities from `trigram_model`.\n",
         "# Add your code here.\n",
@@ -1950,13 +2009,30 @@
         "print(\"\\n\\nSampled next token:\")\n",
         "print(context, next_token)"
       ],
-      "outputs": [],
-      "execution_count": null
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Candidate tokens: ['the', 'a', 'Banku', 'Tella,', 'Maafe,', 'Umqombothi,', 'sugarcane', 'crispy', 'warm', 'Doro', 'sambusa,', 'dodo,', 'Fura']\n",
+            "Candidate token probabilities: [0.125, 0.53125, 0.03125, 0.03125, 0.03125, 0.03125, 0.03125, 0.03125, 0.03125, 0.03125, 0.03125, 0.03125, 0.03125]\n",
+            "\n",
+            "\n",
+            "Sampled next token:\n",
+            "looking for Tella,\n"
+          ]
+        }
+      ],
+      "execution_count": 30
     },
     {
       "metadata": {
         "id": "ovcAe7nmsDBX",
-        "cellView": "form"
+        "cellView": "form",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c0c852eb-fe87-46eb-c579-359b455aec23"
       },
       "cell_type": "code",
       "source": [
@@ -1965,8 +2041,16 @@
         "    trigram_model, candidate_tokens, candidate_tokens_probabilities\n",
         ")\n"
       ],
-      "outputs": [],
-      "execution_count": null
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "✅ Nice! Your answer looks correct.\n"
+          ]
+        }
+      ],
+      "execution_count": 31
     },
     {
       "metadata": {
@@ -2045,7 +2129,7 @@
         "    return \" \".join(generated_words)"
       ],
       "outputs": [],
-      "execution_count": null
+      "execution_count": 32
     },
     {
       "metadata": {
@@ -2060,7 +2144,12 @@
     },
     {
       "metadata": {
-        "id": "xndDil588L39"
+        "id": "xndDil588L39",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "256f24e2-f1c7-40ef-8253-9b242b5fd762"
       },
       "cell_type": "code",
       "source": [
@@ -2078,8 +2167,22 @@
         "    num_tokens_to_generate=num_tokens_to_generate,\n",
         ")"
       ],
-      "outputs": [],
-      "execution_count": null
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Jide was hungry so she went looking for local spices, and a reminder of spices such as lions,'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 33
+        }
+      ],
+      "execution_count": 33
     },
     {
       "metadata": {
@@ -2094,7 +2197,12 @@
     },
     {
       "metadata": {
-        "id": "0Pq0FW_2IULl"
+        "id": "0Pq0FW_2IULl",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "6bbc0796-748a-4a8d-9df4-d5a56d2809f7"
       },
       "cell_type": "code",
       "source": [
@@ -2109,8 +2217,22 @@
         "    num_tokens_to_generate=num_tokens_to_generate,\n",
         ")"
       ],
-      "outputs": [],
-      "execution_count": null
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Jide was hungry so she went looking for dodo, the crispy fried plantains and cassava dough (banku) served'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 34
+        }
+      ],
+      "execution_count": 34
     },
     {
       "metadata": {
