--- a/course_1/gdm_lab_1_4_prepare_the_dataset_for_training_a_slm.ipynb
+++ b/course_1/gdm_lab_1_4_prepare_the_dataset_for_training_a_slm.ipynb
@@ -703,11 +703,12 @@
         "# Create a dictionary that maps an index (a number) back to\n",
         "# its corresponding token in the vocab.\n",
         "index_to_token = {}\n",
-        "\n",
+        "for token, token_id in token_to_index.items():\n",
+        "    index_to_token[token_id] = token\n",
         "# Add your code here."
       ],
       "outputs": [],
-      "execution_count": null
+      "execution_count": 19
     },
     {
       "cell_type": "code",
@@ -717,10 +718,22 @@
       ],
       "metadata": {
         "cellView": "form",
-        "id": "CvATRQpdVWpL"
+        "id": "CvATRQpdVWpL",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "4eb9ca00-fb67-4388-f278-f1ea8918a40a"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "✅ Nice! Your answer looks correct.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -751,10 +764,48 @@
         "    print(f\"{token_id}: '{index_to_token[token_id]}'\")"
       ],
       "metadata": {
-        "id": "-XLmjxpfbw4r"
+        "id": "-XLmjxpfbw4r",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "9c835b73-6a76-470c-8d6c-64efd3c07ebb"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "token_to_index:\n",
+            "\n",
+            "'': 0\n",
+            "'Sahel': 1\n",
+            "'chicken)': 2\n",
+            "'mole-rat.': 3\n",
+            "'porridge.': 4\n",
+            "'female.': 5\n",
+            "'vary': 6\n",
+            "'whole,': 7\n",
+            "'raw': 8\n",
+            "'soul': 9\n",
+            "\n",
+            "\n",
+            "\n",
+            "index_to_token:\n",
+            "\n",
+            "0: ''\n",
+            "1: 'Sahel'\n",
+            "2: 'chicken)'\n",
+            "3: 'mole-rat.'\n",
+            "4: 'porridge.'\n",
+            "5: 'female.'\n",
+            "6: 'vary'\n",
+            "7: 'whole,'\n",
+            "8: 'raw'\n",
+            "9: 'soul'\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -830,7 +881,7 @@
         "    return \" \".join(tokens)"
       ],
       "outputs": [],
-      "execution_count": null
+      "execution_count": 22
     },
     {
       "metadata": {
@@ -845,15 +896,27 @@
     },
     {
       "metadata": {
-        "id": "84E5f-ME_0Fb"
+        "id": "84E5f-ME_0Fb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "dc925997-e518-4048-90ba-755397c497df"
       },
       "cell_type": "code",
       "source": [
         "text = dataset[0]\n",
         "print(text)"
       ],
-      "outputs": [],
-      "execution_count": null
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The Lagos air was thick with humidity, but the energy in the club was electric. The band launched into a hypnotic Afrobeat groove, the drums pounding out a complex polyrhythm, the horns blaring a soaring melody, and the bass laying down a deep, funky foundation. A woman named Imani moved effortlessly to the music, her body swaying in time with the rhythm. The music seemed to flow through her, a powerful current of energy and joy. All around her, people were dancing, singing, and clapping, caught up in the infectious rhythm. The music was more than just entertainment; it was a celebration of life, a connection to their shared heritage, a vibrant expression of the soul of Lagos.\n"
+          ]
+        }
+      ],
+      "execution_count": 23
     },
     {
       "metadata": {
@@ -866,14 +929,29 @@
     },
     {
       "metadata": {
-        "id": "6K2wAHCKHknD"
+        "id": "6K2wAHCKHknD",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "bc0e4096-f66b-4ed9-dbde-0edbe2e8a52e"
       },
       "cell_type": "code",
       "source": [
         "encode(text)[:10]"
       ],
-      "outputs": [],
-      "execution_count": null
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[2724, 2691, 2405, 2720, 2633, 3162, 4677, 29, 3735, 316]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 24
+        }
+      ],
+      "execution_count": 24
     },
     {
       "metadata": {
@@ -886,14 +964,33 @@
     },
     {
       "metadata": {
-        "id": "y65u6LNEHigD"
+        "id": "y65u6LNEHigD",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "4eb9712a-3ceb-4cbc-c981-4bc9dd10421c"
       },
       "cell_type": "code",
       "source": [
         "decode(encode(text)[:10])"
       ],
-      "outputs": [],
-      "execution_count": null
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'The Lagos air was thick with humidity, but the energy'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 25
+        }
+      ],
+      "execution_count": 25
     },
     {
       "cell_type": "markdown",
@@ -1067,7 +1164,7 @@
         "        return self.join_text(tokens)"
       ],
       "outputs": [],
-      "execution_count": null
+      "execution_count": 26
     },
     {
       "metadata": {
@@ -1080,15 +1177,27 @@
     },
     {
       "metadata": {
-        "id": "0rMKmNlRY-3q"
+        "id": "0rMKmNlRY-3q",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "62b8a958-baf6-41a3-d763-163c7b68b1b0"
       },
       "cell_type": "code",
       "source": [
         "tokenizer = SimpleWordTokenizer(dataset)\n",
         "slm.test_simple_word_tokenizer(tokenizer, vocabulary, dataset)"
       ],
-      "outputs": [],
-      "execution_count": null
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "✅ Nice! The tokenizer seems to be working correctly.\n"
+          ]
+        }
+      ],
+      "execution_count": 27
     },
     {
       "metadata": {
