--- a/course_2/gdm_lab_2_1_preprocess_data.ipynb
+++ b/course_2/gdm_lab_2_1_preprocess_data.ipynb
@@ -135,7 +135,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "TYksWTRhUjVm"
       },
@@ -201,11 +201,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
-        "id": "v8VoAdHPkZxY"
+        "id": "v8VoAdHPkZxY",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2f2c65ae-f58b-4f5f-db26-78a30248fa57"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Before cleaning: \n",
+            "\ttext: <h3>Let's come together to <strong>win</strong> this match. <br>We can do it!</h3>\n",
+            "\n",
+            "After cleaning: \n",
+            "\ttext: Let's come together to win this match. We can do it!\n"
+          ]
+        }
+      ],
       "source": [
         "def clean_html_tags(text: str) -> str:\n",
         "    \"\"\"\n",
@@ -269,11 +285,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
-        "id": "31App1OosN86"
+        "id": "31App1OosN86",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "72d51ada-14c6-462e-abe8-fbda6f50b657"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The Krowor Municipal District was carved out of the Ledzokuku-Krowor Municipal District in 2018 &amp; it's population is &gt; 200000.\n"
+          ]
+        }
+      ],
       "source": [
         "text = (\n",
         "    \"<p>The Krowor Municipal District was carved out of the Ledzokuku-Krowor\"\n",
@@ -310,7 +338,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "QMGUGCFH4Sfx"
       },
@@ -337,9 +365,10 @@
         "    # Replace HTML entities.\n",
         "    text = re.sub(\"&nbsp;\", \" \", text)  # Replace non-breaking space with space.\n",
         "    # Add your code to the next three lines.\n",
-        "    text =\n",
-        "    text =\n",
-        "    text =\n",
+        "    text =re.sub(\"&amp;\", \"&\", text)\n",
+        "    text =re.sub(\"&lt;\", \"<\", text)\n",
+        "    text =re.sub(\"&gt;\", \">\", text)\n",
+        "    text =re.sub(\"&nbsp;\", \" \", text)\n",
         "\n",
         "    return text"
       ]
@@ -355,11 +384,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
-        "id": "iAV0jn_o5e2w"
+        "id": "iAV0jn_o5e2w",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "01816923-477b-474c-dfa6-f3ef5c3954a5"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Before cleaning: \n",
+            "\ttext: <p>The Krowor Municipal District was carved out of the Ledzokuku-Krowor Municipal District in 2018 &amp; it's population is &gt; 200000.</p>\n",
+            "\n",
+            "After cleaning: \n",
+            "\ttext: The Krowor Municipal District was carved out of the Ledzokuku-Krowor Municipal District in 2018 & it's population is > 200000.\n",
+            "\n",
+            "✅ Nice! Your answer looks correct.\n"
+          ]
+        }
+      ],
       "source": [
         "text = (\n",
         "    \"<p>The Krowor Municipal District was carved out of the Ledzokuku-Krowor\"\n",
@@ -508,11 +555,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
-        "id": "G7FL2NZa4dgB"
+        "id": "G7FL2NZa4dgB",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "fa21a225-efee-472f-9fa7-f0194c5f5514"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Before cleaning: \n",
+            "\ttext: Bag of rice now cost ₦150000 naira. Ah! 😱 Èdakun o\n",
+            "\n",
+            "After cleaning: \n",
+            "\ttext: Bag of rice now cost 150000 naira. Ah!  Èdakun o\n",
+            "✅ Nice! Your answer looks correct.\n"
+          ]
+        }
+      ],
       "source": [
         "def clean_unicode(text: str) -> str:\n",
         "    \"\"\"\n",
@@ -530,7 +594,7 @@
         "    #\n",
         "    # Change `categories_to_keep` so that you also preserve punctuation marks.\n",
         "\n",
-        "    categories_to_keep = {\"L\", \"N\"}  # Change code here.\n",
+        "    categories_to_keep = {\"L\", \"N\",\"P\"}  # Change code here.\n",
         "\n",
         "    keep = []\n",
         "    for ch in text:\n",
